<resources>
    <string name="app_name">Simarropop</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="user">User</string>
    <string name="username">User</string>
    <string name="password">Password</string>
    <string name="signup">Sign Up</string>
    <string name="login">Login</string>
    <string name="name">Name</string>
    <string name="lastname">Last name</string>
    <string name="location">Location</string>
    <string name="articles">Articles</string>
    <string name="myarticles">My articles</string>
    <string name="message">Message</string>
    <string name="profile">Profile</string>
    <string name="login_prompt">Login</string>
    <string name="sign_up">Sign up</string>
    <string name="submit">Submit</string>
    <string name="price">Price</string>
    <string name="mail">Mail</string>
    <string name="passwordconfirm">Confirm Password</string>
    <string name="back">Back</string>
    <string name="new_product">New Article</string>
    <string name="description">Description</string>
    <string name="buy">Buy</string>
    <string name="save">Save</string>
    <string name="backup">Recover data</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_click">Title click</string>
    <string name="menu_camera">Camera</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="menu_group">Others</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>