<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_perfil"
            android:title="@string/profile" />
        <item
            android:id="@+id/nav_myProducts"
            android:icon="@drawable/ic_mis_productos"
            android:title="@string/myarticles" />
    </group>

    <group
        android:id="@+id/group1"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_tools"
            android:icon="@drawable/ic_menu_tools"
            android:title="@string/menu_tools" />
    </group>

    <item android:title="@string/menu_group">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_share"
                    android:icon="@drawable/ic_menu_share"
                    android:title="@string/menu_share" />


            </group>
        </menu>
    </item>

</menu>