<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.SubirArticuloFragment"
    android:background="#f0eded"
    >

    <ImageView
        android:id="@+id/ivSubirFoto"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@tools:sample/avatars" />


    <EditText
        android:id="@+id/etsubirName"
        android:layout_width="271dp"
        android:layout_height="43dp"
        android:layout_marginTop="276dp"
        android:hint="@string/name"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btSubir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="62dp"
        android:text="@string/new_product"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/lname_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="320dp"
        app:hintEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
    <EditText
        android:id="@+id/etSubirDesc"
        android:layout_width="294dp"
        android:layout_height="114dp"
        android:layout_marginStart="58dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="59dp"
        android:hint="@string/description"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etsubirName" />
    </com.google.android.material.textfield.TextInputLayout>


    <EditText
        android:id="@+id/etSubirPrice"
        android:layout_width="81dp"
        android:layout_height="49dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/price"
        android:inputType="numberDecimal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lname_layout" />

    <Spinner
        android:id="@+id/spSubir"
        android:layout_width="186dp"
        android:layout_height="26dp"
        android:layout_marginStart="27dp"
        android:layout_marginTop="480dp"
        android:layout_marginEnd="59dp"
        android:spinnerMode="dropdown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/etSubirPrice"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_marginTop="484dp"
        android:text="€"
        app:fontFamily="@font/hindsiliguribold"
        app:layout_constraintStart_toEndOf="@+id/etSubirPrice"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>