<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f0eded"
    tools:context=".activities.ArticuloActivity">


    <ImageView
        android:id="@+id/ivArticuloActFotoProducto"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toTopOf="@+id/guideline5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/defaultplaceholder" />

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/ibArticuloActBack"
        android:layout_below="@+id/ivArticuloActFotoProducto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="NotSibling">

        <TextView
            android:id="@+id/tvArticuloNumLikes"
            android:layout_width="49dp"
            android:layout_height="49dp"
            android:layout_marginStart="290dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/bordeblanco"
            android:gravity="center"
            android:text="Like"
            android:textSize="22dp"
            app:fontFamily="@font/hindsiliguribold" />

        <ImageButton
            android:id="@+id/ibArticuloActBack"
            android:layout_width="43dp"
            android:layout_height="41dp"
            android:layout_alignParentTop="true"
            android:layout_marginStart="16dp"
            android:layout_marginTop="17dp"
            android:background="@null"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/backarrow32" />

        <ImageButton
            android:id="@+id/ibArticuloActLike"
            android:layout_width="wrap_content"
            android:layout_height="44dp"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="287dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="15dp"
            android:layout_toEndOf="@+id/ibArticuloActBack"
            android:background="@null"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/heartwhite32" />


    </RelativeLayout>


    <TextView
        android:id="@+id/tvArticuloActTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/name"
        android:textSize="32dp"
        app:fontFamily="@font/hindsiliguribold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.146"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline5" />

    <TextView
        android:id="@+id/tvArticuloActVendedor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="84dp"
        android:text="@string/name"
        android:textSize="32dp"
        app:fontFamily="@font/hindsiliguriregular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.418"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline5" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/ivAvatarUsuarioArt"
        android:layout_width="51dp"
        android:layout_height="49dp"
        android:layout_marginTop="84dp"
        android:src="@drawable/profilepicexample"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.133"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline5"
        tools:src="@tools:sample/avatars" />

    <TextView
        android:id="@+id/tvArticuloActPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/price"
        android:textSize="26dp"
        app:fontFamily="@font/hindsiliguribold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.802"
        app:layout_constraintStart_toEndOf="@+id/tvArticuloActTitle"
        app:layout_constraintTop_toTopOf="@+id/guideline5"
        app:layout_constraintVertical_bias="0.039" />




    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="421dp" />

    <com.google.android.gms.maps.MapView
        android:id="@+id/mapView2"
        android:layout_width="123dp"
        android:layout_height="127dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="36dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tvArticuloActDescripcion"
        android:layout_width="193dp"
        android:layout_height="111dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="90dp"
        android:layout_marginBottom="16dp"
        android:ems="10"
        android:gravity="start|top"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvArticuloActTitle"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btArticuloActComprar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="28dp"
        android:text="@string/buy"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvArticuloActPrice"
        app:layout_constraintVertical_bias="0.106" />


</androidx.constraintlayout.widget.ConstraintLayout>