<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    tools:context=".fragments.ProfileFragment">
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="88dp"
        app:fabSize="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.954"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/nut" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_sub_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:visibility="gone"
        app:fabSize="mini"
        app:layout_constraintBottom_toTopOf="@+id/fab_main"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.955"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/logout" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_sub_2"
        android:layout_width="47dp"
        android:layout_height="42dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="88dp"
        android:visibility="gone"
        app:fabSize="mini"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/fab_main"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/edit" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="#f0eded"

        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >


            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/ivitemUsuario"
                android:layout_width="143dp"
                android:layout_height="144dp"
                android:layout_marginTop="64dp"
                app:civ_circle_background_color="#f7f7f7"
                android:src="@drawable/profilepicexample"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.507"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@tools:sample/avatars" />


            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.5" />

            <TextView
                android:id="@+id/tvProfileNombre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="252dp"
                android:text="@string/name"
                app:layout_constraintEnd_toStartOf="@+id/guideline"
                app:layout_constraintStart_toStartOf="@+id/guideline3"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvProfileInputNombre"
                android:layout_width="wrap_content"
                android:layout_height="21dp"
                android:layout_marginTop="252dp"
                android:hint="@string/name"
                app:layout_constraintEnd_toStartOf="@+id/guideline4"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/guideline"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvProfileInputApellido"
                android:layout_width="wrap_content"
                android:layout_height="21dp"
                android:layout_marginTop="300dp"
                android:hint="@string/lastname"
                app:layout_constraintEnd_toStartOf="@+id/guideline4"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/guideline"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvProfileApellido"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                android:text="@string/lastname"
                app:layout_constraintEnd_toStartOf="@+id/guideline"
                app:layout_constraintHorizontal_bias="0.486"
                app:layout_constraintStart_toStartOf="@+id/guideline3"
                app:layout_constraintTop_toBottomOf="@+id/tvProfileNombre" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.25" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.75" />


            <EditText
                android:id="@+id/etProfileEditName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="236dp"
                android:ems="10"
                android:hint="@string/name"
                android:inputType="textPersonName"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="@+id/tvProfileInputNombre"
                app:layout_constraintHorizontal_bias="0.606"
                app:layout_constraintStart_toStartOf="@+id/guideline"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/etProfileEditLastName"
                android:layout_width="wrap_content"
                android:layout_height="47dp"
                android:layout_marginTop="288dp"
                android:ems="10"
                android:hint="@string/lastname"
                android:inputType="textPersonName"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="@+id/tvProfileInputNombre"
                app:layout_constraintHorizontal_bias="0.606"
                app:layout_constraintStart_toStartOf="@+id/guideline"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvProfileCorreo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="344dp"
                android:text="@string/mail"
                app:layout_constraintEnd_toStartOf="@+id/guideline"
                app:layout_constraintStart_toStartOf="@+id/guideline3"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvProfileInputCorreo"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_marginTop="344dp"
                android:hint="@string/mail"
                app:layout_constraintEnd_toStartOf="@+id/guideline4"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/guideline"
                app:layout_constraintTop_toTopOf="parent" />


            <EditText
                android:id="@+id/etProfileEditMail"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginTop="336dp"
                android:ems="10"
                android:hint="@string/mail"
                android:inputType="textPersonName"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="@+id/tvProfileInputNombre"
                app:layout_constraintHorizontal_bias="0.612"
                app:layout_constraintStart_toStartOf="@+id/guideline"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvProfileContra"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="388dp"
                android:text="@string/password"
                app:layout_constraintEnd_toStartOf="@+id/guideline"
                app:layout_constraintHorizontal_bias="0.536"
                app:layout_constraintStart_toStartOf="@+id/guideline3"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvProfileInputContra"
                android:layout_width="wrap_content"
                android:layout_height="21dp"
                android:layout_marginTop="388dp"
                android:hint="@string/password"
                app:layout_constraintEnd_toStartOf="@+id/guideline4"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/guideline"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/etProfileEditContra"
                android:layout_width="wrap_content"
                android:layout_height="49dp"
                android:layout_marginTop="388dp"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPersonName"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="@+id/tvProfileInputNombre"
                app:layout_constraintHorizontal_bias="0.618"
                app:layout_constraintStart_toStartOf="@+id/guideline"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.gms.maps.MapView
                android:id="@+id/mapView"
                android:layout_width="216dp"
                android:layout_height="243dp"
                tools:layout_editor_absoluteX="106dp"
                tools:layout_editor_absoluteY="507dp" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>



